# notegen

./: .gitignore  README.md  pyproject.toml  server.py
.cursor/: mcp.json
.cursor/rules/: commands.mdc  keyword_concept.mdc  workflow.mdc
registry/: category_bank.md  keyword_bank.md  template.md
src/notegen/: cli.py  file_utils.py  keyword_utils.py  video_utils.py
